@@ -1,4 +1,7 @@
 2009-08-29
+- adjust saturation/brightness on task icon
+
+2009-08-29
 - merge change described in issue 122 (by jackp)
   made right click easier
 
